...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivShowFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/ic_watch_later_black_24dp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="left|center_vertical"
        android:lineSpacingExtra="10sp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RatingBar
        android:id="@+id/rbRating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:numStars="5"
        android:rating="3.5"
...
