...

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibFavourite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_star_border_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
...
