...
    <string name="min_rating">Min Rating</string>
    <string name="only_favorites">Only Favorites</string>
    <string name="owned_ingredients">Only Owned Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients_header">Ingredients:</string>
    <string name="description_header">Description:</string>
    <string name="type_dessert">Dessert</string>
    <string name="type_snack">Snack</string>
    <string name="type_main">Main course</string>
    <string name="nav_home">Home</string>
    <string name="nav_pantry">My Pantry</string>
    <string name="nav_grocery_list">Grocery List</string>
    <string name="minutes">min</string>
...
